--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@supabase/supabase-js": "2.57.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
