chore: workflow para validar secrets de Sentry

--- a/.github/workflows/check-sentry-secrets.yml
+++ b/.github/workflows/check-sentry-secrets.yml
@@ -1,19 +1,24 @@
-name: Check Sentry secrets
+(name: Check Sentry secrets
+
 on:
-  workflow_dispatch: {}   # te permite ejecutarlo manualmente
+  workflow_dispatch: {}
 
 jobs:
   check:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
-
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
       - name: Check presence of secrets
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
         run: |
+          set -e
           for v in SENTRY_AUTH_TOKEN SENTRY_ORG SENTRY_PROJECT; do
             if [ -z "${!v}" ]; then
               echo "::error title=Missing secret::$v is empty or not set"
@@ -22,12 +27,26 @@ jobs:
               echo "$v is set ✅"
             fi
           done
-
       - name: Check Sentry connectivity
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
         run: |
+          set -e
           npm i -g @sentry/cli
-          # Muestra información de tu org si el token es válido
-          sentry-cli --org "$SENTRY_ORG" info
+          sentry-cli info
+      - name: Create and delete a test release
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+          SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
+        run: |
+          set -e
+          npm i -g @sentry/cli
+          export RELEASE_TEST="test-\${GITHUB_SHA}"
+          sentry-cli releases new "\$RELEASE_TEST"
+          sentry-cli releases set-commits "\$RELEASE_TEST" --auto
+          sentry-cli releases finalize "\$RELEASE_TEST"
+          echo "✅ Release creado: \$RELEASE_TEST"
+          sentry-cli releases delete "\$RELEASE_TEST" -y
+          echo "🧹 Release eliminado")
