--- a/package.json
+++ b/package.json
@@ -43,5 +43,6 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.15.1"
 }
