--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint .",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
-    "typecheck": "tsc -noEmit"
+    "typecheck": "tsc -noEmit",
+    "lint:fix": "eslint . --fix",
+    "build:clean": "rm -rf .next && next build"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "15.5.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.13",
     "@types/react": "^19.1.12",
@@ -42,7 +45,8 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.43.0"
   },
   "packageManager": "pnpm@10.15.1"
 }
