WIP: respaldo antes del reset a ac6c0fd

--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
     "typescript": "^5",
     "typescript-eslint": "^8.43.0"
   },
-  "packageManager": "pnpm@10.15.1"
+  "packageManager": "pnpm@10.16.0+sha512.8066e7b034217b700a9a4dbb3a005061d641ba130a89915213a10b3ca4919c19c037bec8066afdc559b89635fdb806b16ea673f2468fbb28aabfa13c53e3f769"
 }
