--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@sentry/nextjs": "^10.11.0",
     "@supabase/auth-helpers-nextjs": "0.10.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "2.57.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
