--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.36.0",
     "@next/eslint-plugin-next": "15.5.3",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.13",
     "@types/qrcode": "^1.5.5",
