nuevo commit sentry

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,34 +17,35 @@ jobs:
       NEXT_PUBLIC_SENTRY_ENV: production
       NEXT_TELEMETRY_DISABLED: "1"
       NEXT_PUBLIC_SITE_URL: https://example.com
-      # Si usas vars de org:
       NEXT_PUBLIC_SENTRY_DSN: ${{ vars.NEXT_PUBLIC_SENTRY_DSN }}
-      # O si prefieres secret, comenta la de arriba y descomenta esta:
+      # Si prefieres secret en vez de vars:
       # NEXT_PUBLIC_SENTRY_DSN: ${{ secrets.NEXT_PUBLIC_SENTRY_DSN }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Node primero (caché pnpm nativa)
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'                # Alineado con tu entorno local
-          cache: 'pnpm'
-          cache-dependency-path: pnpm-lock.yaml
-
-      # pnpm sin "version": usa package.json: "packageManager": "pnpm@10.17.1"
-      - name: Setup PNPM
+      # 1) Habilita Corepack y PNPM (lee la versión desde package.json: "packageManager")
+      - name: Setup PNPM (from packageManager)
         uses: pnpm/action-setup@v4
         with:
           run_install: false
+          # opcional: package_json_path: ./package.json
+
+      # 2) Node DESPUÉS de pnpm para que funcione el cache: 'pnpm'
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'pnpm'
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Show versions
         run: |
           node -v
           pnpm -v
           which pnpm
+          corepack -v || true
 
       - name: Install deps
         run: pnpm install --frozen-lockfile
