--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "diff": "^8.0.2",
     "html2canvas": "^1.4.1",
+    "import-in-the-middle": "^1.14.4",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.3",
@@ -33,6 +34,7 @@
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "require-in-the-middle": "^8.0.0",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
