--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
+    "ts-morph": "^27.0.0",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5",
     "typescript-eslint": "^8.43.0"
