--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jspdf": "^3.0.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.3",
+    "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
